Add Geofence when save task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
     <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
     <string name="google_maps_key">GOOGLE_MAPS_API_KEY</string>
+    <string name="geofences_added">Geofences added</string>
 </resources>
